# tasksync

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SYSTEMD_SETUP.md  install-systemd.sh  pyproject.toml  requirements.txt  setup.py  tasksync-system.service  tasksync.service
.claude/: settings.local.json
.github/: copilot-instructions.md
tasksync/: __init__.py  cli.py  config.py  google_tasks.py  models.py  sync.py  todoist_client.py
tests/: __init__.py  test_config.py  test_google_tasks.py  test_sync.py  test_todoist_client.py
